# AML_Final_Project

./: .gitignore  README.md  api.py  app.py  config.py  main.py  pyproject.toml  requirements.txt  smoke_test.py  test_neo.py
.streamlit/: config.toml
data/judgements/: Abhilasha_vs_Parkash_on_15_September_2020_1.txt  Action_Ispat_And_Power_Pvt_Ltd_vs_Shyam_Metalics_And_Energy_Limited_on_15_December_2020_1.txt  Ahmad_Ali_Quraishi_vs_The_State_Of_Uttar_Pradesh_on_30_January_2020_1.txt  Alembic_Pharmaceuticals_Ltd_vs_Rohit_Prajapati_on_1_April_2020_1.txt  Amar_Nath_Chaubey_vs_Union_Of_India_on_14_December_2020_1.txt  Amar_Singh_vs_The_State_Nct_Of_Delhi_on_12_October_2020_1.txt  Ambalal_Sarabhai_Enterprise_Limited_vs_Ks_Infraspace_Llp_Limited_on_6_January_2020_1.txt  Amish_Devgan_vs_Union_Of_India_on_7_December_2020_1.txt  Anand_Yadav_vs_The_State_Of_Uttar_Pradesh_on_12_October_2020_1.txt  Ananta_Kamilya_vs_The_State_Of_West_Bengal_on_7_January_2020_1.txt  Aneesh_Kumar_V_S_vs_The_State_Of_Kerala_on_24_April_2020_1.txt  Anglo_American_Metallurgical_Coal_Pty_vs_Mmtc_Ltd_on_17_December_2020_1.txt  (+388 more)
evaluation/: cleanup.py  eval_entities.csv  eval_entities_2020.csv  eval_queries.csv  eval_queries_2020.csv  eval_queries_final.csv  eval_queries_final_2020.csv  eval_results_filtered.json  eval_results_ready_for_ragas.json  generate_eval_data.py  generate_eval_entities.py  generate_eval_queries.py  ground_truth.csv  ground_truth_2020.csv  inspect_graph.py  inspect_vector_store.py  paraphrase_queries.py  run_ragas_eval.py  test_metrics_5_samples.csv
src/generation/: llm_chain.py  (+1 more)
(+9 files in other folders)
